# service_talk

./: README.md
api/: Cargo.toml
api/src/: domain.rs  main.rs
api/src/controller/: endpoint.rs  mod.rs  model.rs
api/src/infra/: repository.rs
api/src/infra/db/: flyway_schema_history.rs  mod.rs  prelude.rs  room.rs
databases/postgres/: flyway.conf
databases/postgres/sql/release-1.0/: V1__Create_room_table.sql
development/: .envrc  appsetting_development.json  docker-compose.yaml  envoy.yaml
development/entrypoints/: load-extensions.sh
ui/: .prettierrc.js  README.md  cypress.config.ts  next.config.js  package.json
ui/cypress/downloads/: download.html
ui/cypress/e2e/: create_page.cy.ts  home_page.cy.ts  update_page.cy.ts
ui/src/modules/: index.ts
ui/src/modules/api/: fetcher.ts  index.ts  model.ts
ui/src/modules/component/: index.ts
ui/src/modules/component/common/: form.tsx  layout.tsx
ui/src/modules/component/home/: HomeContainer.tsx  HomePage.tsx
ui/src/modules/component/room/container/: RoomCreateFormContainer.tsx  RoomUpdateFormContainer.tsx  index.ts
ui/src/modules/component/room/pages/: RoomCreateFormPage.tsx  RoomUpdateFormPage.tsx  index.ts
ui/src/modules/component/signin/: SignInContainer.tsx  SignInPage.tsx
ui/src/modules/component/signup/: SignUpContainer.tsx  SignUpPage.tsx
ui/src/modules/service/: hook.ts  index.ts  model.ts
ui/src/pages/: _app.tsx  index.tsx  signup.tsx
ui/src/pages/room/: create.tsx
ui/src/pages/room/[roomId]/: update.tsx
ui/style/: global.style.css
(+3 files in other folders)
