[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
async-trait = "0.1.56"
clap = {version = "3.2.6", features = ["derive"]}
consulrs = "0.1.0"
sea-orm = {version = "0.8.0", features = ["sqlx-postgres", "runtime-actix-rustls", "macros"]}
serde = {version = "1.0.137", features = ["derive"]}
